--- a/Task1.html
+++ b/Task1.html
@@ -31,13 +31,13 @@
   }
 
   .hero {
-    background: url('hero-image.jpg') no-repeat center center;
+    background: url('C:\g\GDimage.jpg') no-repeat center center;
     background-size: cover;
     height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color:#FFA500;
   }
 
   .hero h2 {
@@ -54,7 +54,7 @@
 
   .btn {
     display: inline-block;
-    background: #333;
+    background: #00ff62;
     color: #fff;
     padding: 10px 20px;
     text-decoration: none;
